src/objects/CH_Profiles__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CH_Agent__c</fullName>
        <description>CH agent Profile id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CHAgent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Basic_Case_Handling__c</fullName>
        <description>CH Basic Case Handling profile id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Basic Case Handling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Case_Handler__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Case Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Number_of_Days__c</fullName>
        <label>CH Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Number_of_Reactivation_Days__c</fullName>
        <description>Created as part of demand DEM0059836</description>
        <label>CH Number of Reactivation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfileName1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProfileName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProfileName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProfileName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Number_of_Days__c</fullName>
        <label>SP Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CH Profiles</label>
</CustomObject>